# ChangeLog for dev-java/proxool
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/proxool/ChangeLog,v 1.1 2004/12/27 15:22:11 st_lim Exp $

*proxool-0.8.3 (27 Dec 2004)

  27 Dec 2004; Lim Swee Tat <st_lim@gentoo.org> +metadata.xml,
  +proxool-0.8.3.ebuild:
  Initial commit for hibernate
