@@ -1,4 +1,4 @@
-MD5 0f0ec531ce5602eadfa749cf34381b66 ChangeLog 355
+MD5 818f3223d9681f1dd6f0f528a8aed2e3 ChangeLog 468
 MD5 a6ec7d7724fbd068ffb39b5be56134ed metadata.xml 157
-MD5 a780efe68b290b63e6cc4055ccb83c63 proxool-0.8.3.ebuild 936
+MD5 d3bbf5ddebb4164024167e3580ed82a3 proxool-0.8.3.ebuild 972
 MD5 477f7231c4a79d0e4e369a66ac0004cb files/digest-proxool-0.8.3 73
